--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <![endif]-->
     </head>
     <body>
-
+<section class="container">
+<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
       <!-- Navbar
       ================================================== -->
       <div class="bs-docs-section clearfix">
@@ -1146,6 +1147,9 @@
           </div>
         </div>
       </div>
+</div>
+</section>
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
