added menu, checkboxes and spinner

--- a/index.html
+++ b/index.html
@@ -18,8 +18,25 @@
     </head>
     <body>
 
-    <section class="container">
+<nav>
+    <ul>
+        <li>Option 1</li>
+        <li>Option 2</li>
+        <li>Option 3</li>
+        <li>Option 4</li>
+        <li>Option 5</li>
+        <li>Option 6</li>
+    </ul>
+</nav>
+<div class="openNav">
+    <div class="icon"></div>
+</div>
 
+<div class="wrapper">
+
+    <div class="container">
+
+        <!-- HEADER-->
         <div class="bs-component">
             <div class="jumbotron">
                 <h1>Material UI</h1>
@@ -28,6 +45,77 @@
         </div>
 
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+            <!-- Loading Spinner
+                ================================================== -->
+            <div class="bs-docs-section clearfix">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="page-header">
+                            <h3 id="navbar">Loading Spinner</h3>
+                        </div>
+                        <div class="bs-component">
+                            <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+                               <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Checkboxes
+                ================================================== -->
+            <div class="bs-docs-section clearfix">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="page-header">
+                            <h3 id="checkboxes">Checkboxes</h3>
+                        </div>
+                        <div class="bs-component">
+                            <div class="material_block">
+                                <input id="1" type="checkbox" class="material_checkbox">
+                                <label for="1">Red</label>
+                                <input id="2" type="checkbox" class="material_checkbox">
+                                <label for="2">Pink</label>
+                                <input id="3" type="checkbox" class="material_checkbox">
+                                <label for="3">Purple</label>
+                                <input id="4" type="checkbox" class="material_checkbox">
+                                <label for="4">Deep Purple</label>
+                                <input id="5" type="checkbox" class="material_checkbox">
+                                <label for="5">Indigo</label>
+                                <input id="6" type="checkbox" class="material_checkbox">
+                                <label for="6">Blue</label>
+                                <input id="7" type="checkbox" class="material_checkbox">
+                                <label for="7">Light Blue</label>
+                                <input id="8" type="checkbox" class="material_checkbox">
+                                <label for="8">Cyan</label>
+                                <input id="9" type="checkbox" class="material_checkbox">
+                                <label for="9">Teal</label>
+                                <input id="10" type="checkbox" class="material_checkbox">
+                                <label for="10">Green</label>
+                                <input id="11" type="checkbox" class="material_checkbox">
+                                <label for="11">Light Green</label>
+                                <input id="12" type="checkbox" class="material_checkbox">
+                                <label for="12">Lime</label>
+                                <input id="13" type="checkbox" class="material_checkbox">
+                                <label for="13">Yellow</label>
+                                <input id="14" type="checkbox" class="material_checkbox">
+                                <label for="14">Amber</label>
+                                <input id="15" type="checkbox" class="material_checkbox">
+                                <label for="15">Orange</label>
+                                <input id="16" type="checkbox" class="material_checkbox">
+                                <label for="16">Deep Orange</label>
+                                <input id="17" type="checkbox" class="material_checkbox">
+                                <label for="17">Brown</label>
+                                <input id="18" type="checkbox" class="material_checkbox">
+                                <label for="18">Grey</label>
+                                <input id="19" type="checkbox" class="material_checkbox">
+                                <label for="19">Blue Grey</label>
+                            </div>
+                        </div>
+                        <!-- /example -->
+                    </div>
+                </div>
+            </div>
             <!-- Navbar
                 ================================================== -->
             <div class="bs-docs-section clearfix">
@@ -1066,7 +1154,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</div>
+
+
         <br>
         <br>
         <hr>
